# Project-Voxelle

./: .bandit  .env-template  .gitignore  .pre-commit-config.yaml  ADVANCED_DEVELOPMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER.md  DOCKER_GUIDE.md  Dockerfile  IMPROVEMENTS.md  INDEX.md  INTEGRATION_GUIDE.md  LICENSE  MERGE_SUMMARY.md  MERGE_UPDATE_SUMMARY.md  Makefile  NEXTJS_MIGRATION.md  PHASE_2_COMPLETE.md  PROJECT_IMPROVEMENTS.md  PROJECT_IMPROVEMENT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SECURITY.md  START_HERE.md  TESTING.md  api.yaml  config.yaml.template  docker-compose.yml  install.py  manager.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.no_deps.txt  requirements.txt  (+1 more)
.github/workflows/: ci-cd.yml  python-app.yml
apps/discord/: .env-template  .gitignore  README.md  config.yaml  requirements.txt
apps/discord/src/: main.py
apps/discord/src/audio/: sink.py  source.py
apps/discord/src/commands/: __init__.py  base.py  config.py  context.py  info.py  manage.py  operation.py  response.py  voice.py
apps/discord/src/utils/: args.py  bot.py  config.py  time.py
apps/frontend/: README.md
apps/frontend-nextjs/: .env.example  .eslintrc.json  .gitignore  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/frontend-nextjs/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/frontend-nextjs/src/lib/: store.ts
apps/frontend-svite-old/: README.md  package-lock.json  package.json  tailwind.config.js
apps/frontend-svite-old/src/: app.pcss
apps/frontend-svite-old/src/lib/: stores.ts
apps/frontend-svite-old/src/routes/: +layout.svelte  +page.svelte  socketio.ts
apps/frontend/src/routes/: +layout.svelte
apps/twitch/: .env-template  .gitignore  README.md  config.yaml  requirements.txt
apps/twitch/src/: auth.py  main.py
apps/twitch/src/utils/: args.py  helper.py  twitch_monitor.py
apps/vts/: .gitignore  README.md  config.yaml  requirements.txt
apps/vts/src/: main.py
apps/vts/src/utils/: args.py  vts_plugin.py
apps/vts/vts_hotkeys/: .gitignore  example.json  list_of_emotions.txt
configs/: example.yaml
prompts/characters/: example.txt
prompts/instructions/: example.txt
prompts/scenes/: example.txt
src/: main.py
src/utils/: args.py  config.py  exceptions.py  jaison.py  logging.py  logging_utils.py  response_utils.py  validators.py
src/utils/helpers/: audio.py  iterable.py  multiplexor.py  observer.py  path.py  time.py
src/utils/mcp/: __init__.py  manager.py
src/utils/operations/: __init__.py  error.py  manager.py
src/utils/operations/base/: __init__.py  error.py  operation.py
src/utils/operations/embedding/: base.py  openai.py
src/utils/operations/filter_audio/: base.py  pitch.py  rvc.py
src/utils/operations/filter_text/: base.py  chunker_sentence.py  emotion_roberta.py  filter_clean.py  mod_koala.py
src/utils/operations/stt/: azure.py  base.py  fish.py  kobold.py  openai.py
src/utils/operations/t2t/: base.py  kobold.py  openai.py
src/utils/operations/tts/: azure.py  base.py  fish.py  kobold.py  melo.py  openai.py  pytts.py
src/utils/processes/: __init__.py  base.py  error.py  manager.py
src/utils/processes/processes/: koboldcpp.py
src/utils/prompter/: context.py  message.py  prompter.py
src/utils/server/: __init__.py  app_server.py  common.py
tests/: test_exceptions.py  test_response_utils.py  test_validators.py
(+33 files in other folders)
